refactor: user files struct
